Update DB Details

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,4 +17,13 @@ nav.navbar {
 }
 .panel {
 	background-color: #eee;
+	padding: 1em 2em;
+}
+
+footer {
+	width: 100%;
+	background-color: #eee;
+	padding: 1em 2em;
+	font-size: 120%;
+	text-align: center;
 }
