Couple of Updates

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,8 @@ nav.navbar {
 
 .login-win {
 	background-color: #fff;
+	border-top-left-radius: 0.5em;
+	border-top-right-radius: 0.5em;
 	padding: 1em 2em;
 }
 .panel {
