Petty bug fixes

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,7 +5,7 @@ $primary: $blue;
 
 @import 'bulma';
 @import 'buefy/buefy';
-@import 'fonts'; // font awesome
+@import 'fonts'; // material design fonts
 
 $navExtra: 5em;
 
